# projector

./: .gitignore  README.md  metaproject.py  projector.py  setup.py
share/metaproject_template/: CMakeLists.txt
template/: README.md
template/cmake/: submodule.cmake
template/install/: setup.bash
templates/project/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
templates/project/cmake/: matlab.cmake  setup.cmake  tests.cmake
templates/project/cmake/templates/: projectConfig.cmake.in  rrtConfig.cmake.in
templates/project/doc/: Doxyfile.in
